# Server-Client-Total-Commander

./: ApiFilesAndDir.c  ApiFilesAndDir.h  CMakeLists.txt  ClientInput.c  ClientInput.h  Console.c  Console.h  MyTypes.h  README.md  client.c  client.h  main.c  messages.c  messages.h  server.c  server.h  serverApiFiles.c  serverApiFiles.h  serverFiles.c  serverFiles.h
